--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login"></activity>
+        <activity android:name=".LoginNube"></activity>
+        <activity android:name=".AgregarPassword" />
+        <activity android:name=".Login" />
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,13 +28,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
-        <activity android:name=".AgregarUbicacion">
-        </activity>
-        <activity android:name=".Agregar_notas">
-            
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".AgregarUbicacion" />
+        <activity android:name=".Agregar_notas" />
         <activity
             android:name=".AgregarImagen"
             android:label="Agregar Imagen" />
@@ -46,7 +44,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
     </application>
 
 </manifest>
