Navegación con los activitys.                                            Funciona Agregar imagen, ubicación y notas.  Layout de añadir contraseñas.  Cambios en algunos layouts.
 Las navegaciones de los layouts se añadieron, y para la sinc. en la nube se hizo el registro y el login.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginNube"></activity>
+        <activity android:name=".InicioNube"></activity>
+        <activity android:name=".LoginNube" />
         <activity android:name=".AgregarPassword" />
         <activity android:name=".Login" />
         <activity android:name=".SplashScreen">
