--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".InicioNube"></activity>
+        <activity android:name=".ListarStorage"></activity>
+        <activity android:name=".Listar" />
+        <activity android:name=".Galeria" />
+        <activity android:name=".InicioNube" />
         <activity android:name=".LoginNube" />
         <activity android:name=".AgregarPassword" />
         <activity android:name=".Login" />
